package Model.Policy;

public class BasicPlan extends SubscriptionPlan {
    
}
