package Model.Policy;

public class PremiumPlan extends SubscriptionPlan{
    
}
