package Model.Policy;

public class SubscriptionPlan {
    
}
